@@ -7,6 +7,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Fixed
+- Fix message passing and popup size for Chrome
+
 ## [2.1.0] - 2023-10-28
 
 ### Added
